--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.1",
     "multer": "^2.0.1",
+    "nodemailer": "^7.0.5",
     "nodemon": "^3.1.10",
     "razorpay": "^2.9.6",
     "stripe": "^18.3.0",
